# minidb

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_lsm_vs_btree.py  results.md
demos/: demo_concurrency.py  demo_crash_recovery.py  demo_sql.py
docs/: ARCHITECTURE.md
minidb/: __init__.py  cli.py  constants.py  engine.py
minidb/catalog/: catalog.py  schema.py
minidb/execution/: executor.py  operators.py
minidb/index/: bplus_tree.py
minidb/lsm/: bloom.py  lsm_engine.py  sstable.py
minidb/optimizer/: optimizer.py
minidb/recovery/: wal.py
minidb/sql/: ast.py  parser.py
minidb/storage/: buffer_pool.py  disk_manager.py  heap_file.py  page.py
minidb/txn/: lock_manager.py  transaction.py
tests/: test_minidb.py
